# antares-web-installer

./: .gitignore  LICENSE  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish.yml
docs/: CHANGELOG.md  development.md  index.md  installation.md  overview.md  usage.md
docs/assets/: antares-web-installer-title.xcf
src/antares_web_installer/: __about__.py  __init__.py  __main__.py  app.py  cli.py  dialog_unit.py  installer.py  view.py
src/antares_web_installer/cli/: __main__.py  cli.py
src/antares_web_installer/config/: __init__.py  config_2_15.py  config_2_18.py  config_2_19.py  config_desktop.py
src/antares_web_installer/gui/: __main__.py  constants.py  controller.py  dialog_unit.py  logger.py  model.py  mvc.py  view.py  wizard_controller.py  wizard_model.py  wizard_view.py
src/antares_web_installer/gui/widgets/: __init__.py  button.py  frame.py  label.py
src/antares_web_installer/shortcuts/: __init__.py  _linux_shell.py  _win32_shell.py
tests/: test_about.py  test_app.py
tests/config/: test_config_2_15.py  test_config_2_18.py  test_config_2_19.py
tests/config/test_config_2_15/: application-2.14.local.yaml  application-2.14.slurm.yaml  application-2.15.local.yaml  application-2.15.slurm.yaml
tests/config/test_config_2_18/: application-2.17.yaml
tests/config/test_config_2_19/: application-2.18.yaml  application-2.19.yaml
tests/integration/: conftest.py  test_app.py  test_run_server.py
tests/integration/server_mock/: README.md  builder.py  server.py  web.py
tests/samples/: README.md  __init__.py
tests/samples/initial/nt/Program Files/AntaresWeb/AntaresWeb/: AntaresWebServer.py
tests/samples/initial/posix/AntaresWeb/: AntaresWebServer.py
tests/samples/initial/posix/opt/antares-web/AntaresWeb/: AntaresWebServer.py
tests/samples/nt/AntaresWeb/: AntaresWebServer.py  cli.py
tests/samples/nt/AntaresWeb-2.14.4/: config.yaml
tests/samples/nt/AntaresWeb-2.14.4/AntaresWeb/: cli.py  server.py
tests/samples/nt/AntaresWeb-2.15.2/AntaresWeb/: cli.py
tests/samples/nt/AntaresWeb-2.18.3/: config.yaml
tests/samples/nt/AntaresWeb-2.19/: config.yaml
tests/samples/posix/AntaresWeb/: AntaresWebServer.py
tests/samples/posix/AntaresWeb-2.14.4/AntaresWeb/_internal/email_validator-2.1.1.dist-info/: RECORD
tests/samples/posix/AntaresWeb-2.15.2/AntaresWeb/: cli.py
tests/samples/posix/AntaresWeb-2.18.3/: config.yaml
tests/samples/posix/AntaresWeb-2.19/: config.yaml
tests/samples/posix/AntaresWeb/_internal/: server.py
tests/samples/posix/AntaresWeb/_internal/email_validator-2.1.1.dist-info/: RECORD
tests/test_app/: README.md
tests/test_app/copy_files/source_files/: config.yaml
tests/test_app/copy_files/target_files/: config.yaml
tests/test_app/install_files/source_files/: config.yaml
tests/test_app/install_files/target_files/: config.yaml
